--- a/.github/workflows/simple_ci__push_pool_main.yml
+++ b/.github/workflows/simple_ci__push_pool_main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "main", "week_*"]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "week_*"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
