--- a/.github/workflows/simple_ci__push_pool_main.yml
+++ b/.github/workflows/simple_ci__push_pool_main.yml
@@ -38,6 +38,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./week_1/simple_server/Dockerfile
+          file: ML_in_production/week_1/simple_server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ci:latest
