--- a/.github/workflows/simple_ci__push_pool_main.yml
+++ b/.github/workflows/simple_ci__push_pool_main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["week_1"]
+    branches: ["week_*"]
   pull_request:
-    branches: ["week_1"]
+    branches: ["week_*"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -38,6 +38,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: week_1/ML_in_production/week_1/simple_server/Dockerfile
+          file: ./week_1/simple_server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ci:latest
